Gerenciador de tarefas e conectando paginas

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./index.js" defer></script>
+    <script src="./index.js"></script>
 </head>
 <body>
     <main class="flex-container">
         <div class="login-container">
-            <form action="/login" method="post" onsubmit="return verificarDados()">
+            <form action="./tarefas.html" method="post" onsubmit="verificarDados()">
                 <h1>Login</h1>
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" placeholder="Digite seu email">
