--- a/tarefas.html
+++ b/tarefas.html
@@ -17,6 +17,7 @@
 
             </ol>
             <button id="addTarefa" onclick="adicionarTarefa()">Adicionar Tarefa</button>
+            <button id="addTarefa" onclick="removerTarefa()">Remove Tarefa</button>
         </div>
     </main>
 </body>
